# fr4ge

./: .editorconfig  .gitignore  .markdownlint.yaml  .mdformat.toml  .npmrc  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  REUSE.toml  package-lock.json  pyproject.toml  ruff.toml  tombi.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/fr4ge/: __init__.py
tests/: __init__.py  test_main.py
