# SPDX-FileCopyrightText: Chris Wilson <christopher.david.wilson@gmail.com>
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

#:schema tombi://www.schemastore.org/pyproject.json

[project]
name = "fr4ge"
version = "0.1.0"
description = "A set of experimental tools for managing the lifecycle of printed circuit board assemblies."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Chris Wilson", email = "christopher.david.wilson@gmail.com" }
]
dependencies = []

[project.urls]
Issues = "https://github.com/fr4ge/fr4ge/issues"
Repository = "https://github.com/fr4ge/fr4ge"

[project.scripts]
fr4ge = "fr4ge:main"

[dependency-groups]
dev = [
  "mdformat>=1.0.0",
  "mdformat-footnote>=0.1.3",
  "mdformat-frontmatter>=2.1.2",
  "mdformat-gfm>=1.0.0",
  "mdformat-gfm-alerts>=2.0.0",
  "mdformat-toc>=0.5.0",
  "pre-commit>=4.6.0",
  "pre-commit-hooks>=6.0.0",
  "pytest>=9.1.1",
  "reuse>=6.2.0",
  "ruff>=0.15.19",
  "tombi>=1.1.5",
  "yamllint>=1.38.0",
]

[build-system]
requires = ["uv_build>=0.11.23,<0.12"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-continue-on-failure"
minversion = "6.0"
testpaths = [
  "src",
  "tests",
]
